<resources>
    <string name="app_name">CalcApp</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="b_dot">.</string>
    <string name="b_equal">=</string>
    <string name="b_plus">+</string>
    <string name="b_minus">-</string>
    <string name="b_div">/</string>
    <string name="b_mult">*</string>
    <string name="b_del">DEL</string>

</resources>